--- a/SolA Curtailment Daily Analysis.ipynb
+++ b/SolA Curtailment Daily Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 1,
    "id": "bc659669",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 3,
    "id": "f7f563d6",
    "metadata": {},
    "outputs": [],
@@ -921,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 469,
+   "execution_count": 4,
    "id": "f1d29558",
    "metadata": {},
    "outputs": [],
@@ -944,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 364,
+   "execution_count": 5,
    "id": "2050f99c",
    "metadata": {},
    "outputs": [],
@@ -1276,7 +1276,8 @@
    },
    "outputs": [],
    "source": [
-    "file_path = r\"C:\\Users\\samha\\Documents\\CANVAS\\data\"\n",
+    "#file_path = r\"C:\\Users\\samha\\Documents\\CANVAS\\data\"\n",
+    "file_path = '/Users/samhan/Downloads/data'\n",
     "site_details, unique_cids= input_general_files(file_path)\n",
     "\n",
     "month = '201907'\n",
@@ -1389,7 +1390,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3 (base)",
    "language": "python",
    "name": "python3"
   },
