--- a/src/VWatt Optimization.ipynb
+++ b/src/VWatt Optimization.ipynb
@@ -696,16 +696,8 @@
     "        vwatt_response = 'None'\n",
     "        vwatt_curt_energy = 0\n",
     "            \n",
-    "    return vwatt_response, vwatt_curt_energy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "id": "c458047c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return vwatt_response, vwatt_curt_energy\n",
+    "\n",
     "def check_vwatt_curtailment(data_site, date):\n",
     "    #check if clear sky day. This contains redundant steps like making ghi dict for all days etc, can still be improved.\n",
     "    is_clear_sky_day = check_clear_sky_day(date) \n",
