Finished testing polyfit for 7 samples
- program is ready for sample with duratin of 5 s
- polyfit is better with filter power > 1000
- found some issues regarding vvar

--- a/src/sample_data_creation.ipynb
+++ b/src/sample_data_creation.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "id": "f70b37f0",
    "metadata": {},
    "outputs": [],
@@ -66,8 +66,8 @@
     "    ghi['Mean global irradiance (over 1 minute) in W/sq m'] = [float(ghi_t) if ghi_t.count(' ')<= 3 else np.nan for ghi_t in ghi['Mean global irradiance (over 1 minute) in W/sq m']]\n",
     "    return data, ghi\n",
     "\n",
-    "#file_path = r\"C:\\Users\\samha\\Documents\\CANVAS\\data\"\n",
-    "file_path = r\"/Users/samhan/Downloads/data\"\n",
+    "file_path = r\"C:\\Users\\samha\\Documents\\CANVAS\\data\"\n",
+    "#file_path = r\"/Users/samhan/Downloads/data\"\n",
     "\n"
    ]
   },
@@ -134,12 +134,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "b67c980b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "KeyboardInterrupt\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "#vwatt_sample_json_tim, good for polyfit example\n",
+    "#sample 4: vwatt_sample_json_tim, good for polyfit example\n",
     "c_id = 1165442853\n",
     "date = '2020-04-13'\n",
     "month = date[:4] + date[5:7]\n",
@@ -159,11 +169,324 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "46253866",
+   "execution_count": 3,
+   "id": "51a5b237",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#sample 5: incomplete dataset\n",
+    "sample_num = 5\n",
+    "c_id = 1317822057\n",
+    "date = '2020-03-01'\n",
+    "month = date[:4] + date[5:7]\n",
+    "data_sample, ghi_sample = input_monthly_files(file_path, month)\n",
+    "date_dt = dt.datetime.strptime(date, '%Y-%m-%d').date()\n",
+    "\n",
+    "date_filter = data_sample.index.date == date_dt\n",
+    "site_id_filter = data_sample['c_id'] == c_id\n",
+    "data_sample = data_sample.loc[date_filter & site_id_filter]\n",
+    "\n",
+    "date_filter = ghi_sample.index.date == date_dt\n",
+    "ghi_sample = ghi_sample.loc[date_filter]\n",
+    "\n",
+    "data_sample.to_csv(file_path + '/data_sample_{}.csv'.format(sample_num))\n",
+    "ghi_sample.to_csv(file_path + '/ghi_sample_{}.csv'.format(sample_num))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "3a45406c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#sample 6: biggest vvar site, but don't know which date is good. Probably clear sky day in summer, January?\n",
+    "# clear sky day list: '2020-01-01', '2020-01-02', '2020-01-06', '2020-01-07', '2020-01-08', '2020-01-12', '2020-01-13', '2020-01-14', '2020-01-17', '2020-01-29', '2020-01-30'\n",
+    "\n",
+    "#this turns out to be a very good vwatt sample\n",
+    "sample_num = 6\n",
+    "c_id = 898652745\n",
+    "date = '2020-01-17'\n",
+    "month = date[:4] + date[5:7]\n",
+    "data_sample, ghi_sample = input_monthly_files(file_path, month)\n",
+    "date_dt = dt.datetime.strptime(date, '%Y-%m-%d').date()\n",
+    "\n",
+    "date_filter = data_sample.index.date == date_dt\n",
+    "site_id_filter = data_sample['c_id'] == c_id\n",
+    "data_sample = data_sample.loc[date_filter & site_id_filter]\n",
+    "\n",
+    "date_filter = ghi_sample.index.date == date_dt\n",
+    "ghi_sample = ghi_sample.loc[date_filter]\n",
+    "\n",
+    "data_sample.to_csv(file_path + '/data_sample_{}.csv'.format(sample_num))\n",
+    "ghi_sample.to_csv(file_path + '/ghi_sample_{}.csv'.format(sample_num))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "595eab45",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#sample 7: biggest vvar site according to Baran's script, but don't know which date is good. Probably clear sky day in summer, January?\n",
+    "# clear sky day list: '2020-01-01', '2020-01-02', '2020-01-06', '2020-01-07', '2020-01-08', '2020-01-12', '2020-01-13', '2020-01-14', '2020-01-17', '2020-01-29', '2020-01-30'\n",
+    "\n",
+    "#this turns out to be a very good vwatt sample\n",
+    "sample_num = 7\n",
+    "c_id = 1365659170\n",
+    "date = '2020-01-17'\n",
+    "month = date[:4] + date[5:7]\n",
+    "data_sample, ghi_sample = input_monthly_files(file_path, month)\n",
+    "date_dt = dt.datetime.strptime(date, '%Y-%m-%d').date()\n",
+    "\n",
+    "date_filter = data_sample.index.date == date_dt\n",
+    "site_id_filter = data_sample['c_id'] == c_id\n",
+    "data_sample = data_sample.loc[date_filter & site_id_filter]\n",
+    "\n",
+    "date_filter = ghi_sample.index.date == date_dt\n",
+    "ghi_sample = ghi_sample.loc[date_filter]\n",
+    "\n",
+    "data_sample.to_csv(file_path + '/data_sample_{}.csv'.format(sample_num))\n",
+    "ghi_sample.to_csv(file_path + '/ghi_sample_{}.csv'.format(sample_num))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "2ba062bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample1 = pd.read_csv(file_path + '/data_sample_1.csv')\n",
+    "sample2 = pd.read_csv(file_path + '/data_sample_2.csv')\n",
+    "sample3 = pd.read_csv(file_path + '/data_sample_3.csv')\n",
+    "sample4 = pd.read_csv(file_path + '/data_sample_4.csv')\n",
+    "sample5 = pd.read_csv(file_path + '/data_sample_5.csv')\n",
+    "sample6 = pd.read_csv(file_path + '/data_sample_6.csv')\n",
+    "sample7 = pd.read_csv(file_path + '/data_sample_7.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "85ce33af",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1433\n",
+      "1432\n",
+      "1437\n",
+      "1228\n",
+      "22\n",
+      "1497\n",
+      "17272\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(sample1))\n",
+    "print(len(sample2))\n",
+    "print(len(sample3))\n",
+    "print(len(sample4))\n",
+    "print(len(sample5))\n",
+    "print(len(sample6))\n",
+    "print(len(sample7))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "ea30cdd4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Timestamp</th>\n",
+       "      <th>c_id</th>\n",
+       "      <th>energy</th>\n",
+       "      <th>power</th>\n",
+       "      <th>reactive_power</th>\n",
+       "      <th>voltage</th>\n",
+       "      <th>duration</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2020-01-17 05:49:55+10:30</td>\n",
+       "      <td>898652745</td>\n",
+       "      <td>-113</td>\n",
+       "      <td>-1.883333</td>\n",
+       "      <td>5998</td>\n",
+       "      <td>247.5</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020-01-17 05:50:55+10:30</td>\n",
+       "      <td>898652745</td>\n",
+       "      <td>-113</td>\n",
+       "      <td>-1.883333</td>\n",
+       "      <td>5991</td>\n",
+       "      <td>247.2</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2020-01-17 05:51:55+10:30</td>\n",
+       "      <td>898652745</td>\n",
+       "      <td>-113</td>\n",
+       "      <td>-1.883333</td>\n",
+       "      <td>5966</td>\n",
+       "      <td>247.1</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2020-01-17 05:52:55+10:30</td>\n",
+       "      <td>898652745</td>\n",
+       "      <td>-113</td>\n",
+       "      <td>-1.883333</td>\n",
+       "      <td>5986</td>\n",
+       "      <td>247.4</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2020-01-17 05:53:55+10:30</td>\n",
+       "      <td>898652745</td>\n",
+       "      <td>-114</td>\n",
+       "      <td>-1.900000</td>\n",
+       "      <td>5985</td>\n",
+       "      <td>247.0</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1492</th>\n",
+       "      <td>2020-01-17 11:14:55+10:30</td>\n",
+       "      <td>898652745</td>\n",
+       "      <td>188223</td>\n",
+       "      <td>3137.050000</td>\n",
+       "      <td>13260</td>\n",
+       "      <td>254.9</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1493</th>\n",
+       "      <td>2020-01-17 11:15:55+10:30</td>\n",
+       "      <td>898652745</td>\n",
+       "      <td>186894</td>\n",
+       "      <td>3114.900000</td>\n",
+       "      <td>12935</td>\n",
+       "      <td>254.5</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1494</th>\n",
+       "      <td>2020-01-17 11:16:55+10:30</td>\n",
+       "      <td>898652745</td>\n",
+       "      <td>192079</td>\n",
+       "      <td>3201.316667</td>\n",
+       "      <td>12256</td>\n",
+       "      <td>254.5</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1495</th>\n",
+       "      <td>2020-01-17 11:17:55+10:30</td>\n",
+       "      <td>898652745</td>\n",
+       "      <td>194096</td>\n",
+       "      <td>3234.933333</td>\n",
+       "      <td>13615</td>\n",
+       "      <td>254.1</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1496</th>\n",
+       "      <td>2020-01-17 11:18:55+10:30</td>\n",
+       "      <td>898652745</td>\n",
+       "      <td>200017</td>\n",
+       "      <td>3333.616667</td>\n",
+       "      <td>14540</td>\n",
+       "      <td>253.9</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1497 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      Timestamp       c_id  energy        power  \\\n",
+       "0     2020-01-17 05:49:55+10:30  898652745    -113    -1.883333   \n",
+       "1     2020-01-17 05:50:55+10:30  898652745    -113    -1.883333   \n",
+       "2     2020-01-17 05:51:55+10:30  898652745    -113    -1.883333   \n",
+       "3     2020-01-17 05:52:55+10:30  898652745    -113    -1.883333   \n",
+       "4     2020-01-17 05:53:55+10:30  898652745    -114    -1.900000   \n",
+       "...                         ...        ...     ...          ...   \n",
+       "1492  2020-01-17 11:14:55+10:30  898652745  188223  3137.050000   \n",
+       "1493  2020-01-17 11:15:55+10:30  898652745  186894  3114.900000   \n",
+       "1494  2020-01-17 11:16:55+10:30  898652745  192079  3201.316667   \n",
+       "1495  2020-01-17 11:17:55+10:30  898652745  194096  3234.933333   \n",
+       "1496  2020-01-17 11:18:55+10:30  898652745  200017  3333.616667   \n",
+       "\n",
+       "      reactive_power  voltage  duration  \n",
+       "0               5998    247.5        60  \n",
+       "1               5991    247.2        60  \n",
+       "2               5966    247.1        60  \n",
+       "3               5986    247.4        60  \n",
+       "4               5985    247.0        60  \n",
+       "...              ...      ...       ...  \n",
+       "1492           13260    254.9        60  \n",
+       "1493           12935    254.5        60  \n",
+       "1494           12256    254.5        60  \n",
+       "1495           13615    254.1        60  \n",
+       "1496           14540    253.9        60  \n",
+       "\n",
+       "[1497 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sample6"
+   ]
   }
  ],
  "metadata": {
