add data visualization as an output

--- a/src/sample_data_creation.ipynb
+++ b/src/sample_data_creation.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "id": "f70b37f0",
    "metadata": {},
    "outputs": [],
@@ -66,8 +66,8 @@
     "    ghi['Mean global irradiance (over 1 minute) in W/sq m'] = [float(ghi_t) if ghi_t.count(' ')<= 3 else np.nan for ghi_t in ghi['Mean global irradiance (over 1 minute) in W/sq m']]\n",
     "    return data, ghi\n",
     "\n",
-    "file_path = r\"C:\\Users\\samha\\Documents\\CANVAS\\data\"\n",
-    "#file_path = r\"/Users/samhan/Downloads/data\"\n",
+    "#file_path = r\"C:\\Users\\samha\\Documents\\CANVAS\\data\"\n",
+    "file_path = r\"/Users/samhan/Downloads/data\"\n",
     "\n"
    ]
   },
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "51a5b237",
    "metadata": {},
    "outputs": [],
@@ -181,6 +181,7 @@
     "month = date[:4] + date[5:7]\n",
     "data_sample, ghi_sample = input_monthly_files(file_path, month)\n",
     "date_dt = dt.datetime.strptime(date, '%Y-%m-%d').date()\n",
+    "\n",
     "\n",
     "date_filter = data_sample.index.date == date_dt\n",
     "site_id_filter = data_sample['c_id'] == c_id\n",
@@ -195,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "3a45406c",
    "metadata": {},
    "outputs": [],
@@ -224,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "id": "595eab45",
    "metadata": {},
    "outputs": [],
@@ -491,7 +492,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3 (base)",
    "language": "python",
    "name": "python3"
   },
