--- a/test/test_solarcurtailment.ipynb
+++ b/test/test_solarcurtailment.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "ac45a1ca",
+   "execution_count": 1,
+   "id": "527f62bf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import solarcurtailment"
+    "from solarcurtailment import solarcurtailment"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "2d86b0ec",
    "metadata": {
     "scrolled": true
@@ -29,40 +29,40 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\samha\\anaconda3\\lib\\site-packages\\solarcurtailment.py:873: SettingWithCopyWarning: \n",
+      "C:\\Users\\samha\\anaconda3\\lib\\site-packages\\solarcurtailment\\solarcurtailment.py:873: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data_df['non_clear_sky_day_flag'] = 1\n",
-      "C:\\Users\\samha\\anaconda3\\lib\\site-packages\\solarcurtailment.py:907: SettingWithCopyWarning: \n",
+      "C:\\Users\\samha\\anaconda3\\lib\\site-packages\\solarcurtailment\\solarcurtailment.py:907: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  test['polynomial_fit'] = z[0]*test['time_in_seconds']*test['time_in_seconds'] + \\\n",
-      "C:\\Users\\samha\\anaconda3\\lib\\site-packages\\solarcurtailment.py:916: SettingWithCopyWarning: \n",
+      "C:\\Users\\samha\\anaconda3\\lib\\site-packages\\solarcurtailment\\solarcurtailment.py:916: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  test['ones'] = 1\n",
-      "C:\\Users\\samha\\anaconda3\\lib\\site-packages\\solarcurtailment.py:919: FutureWarning: `rcond` parameter will change to the default of machine precision times ``max(M, N)`` where M and N are the input matrix dimensions.\n",
+      "C:\\Users\\samha\\anaconda3\\lib\\site-packages\\solarcurtailment\\solarcurtailment.py:919: FutureWarning: `rcond` parameter will change to the default of machine precision times ``max(M, N)`` where M and N are the input matrix dimensions.\n",
       "To use the future default and silence this warning we advise to pass `rcond=None`, to keep using the old, explicitly pass `rcond=-1`.\n",
       "  m,c = np.linalg.lstsq(A,y)[0]\n",
-      "C:\\Users\\samha\\anaconda3\\lib\\site-packages\\solarcurtailment.py:920: SettingWithCopyWarning: \n",
+      "C:\\Users\\samha\\anaconda3\\lib\\site-packages\\solarcurtailment\\solarcurtailment.py:920: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  test['y_line'] = c + m*test['cf']\n",
-      "C:\\Users\\samha\\anaconda3\\lib\\site-packages\\solarcurtailment.py:924: SettingWithCopyWarning: \n",
+      "C:\\Users\\samha\\anaconda3\\lib\\site-packages\\solarcurtailment\\solarcurtailment.py:924: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  test['residuals'] = test['polynomial_fit'] - test['y_line']\n",
-      "C:\\Users\\samha\\anaconda3\\lib\\site-packages\\solarcurtailment.py:932: SettingWithCopyWarning: \n",
+      "C:\\Users\\samha\\anaconda3\\lib\\site-packages\\solarcurtailment\\solarcurtailment.py:932: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -183,40 +183,40 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\samha\\anaconda3\\lib\\site-packages\\solarcurtailment.py:871: SettingWithCopyWarning: \n",
+      "C:\\Users\\samha\\anaconda3\\lib\\site-packages\\solarcurtailment\\solarcurtailment.py:871: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data_df['non_clear_sky_day_flag'] = 0\n",
-      "C:\\Users\\samha\\anaconda3\\lib\\site-packages\\solarcurtailment.py:907: SettingWithCopyWarning: \n",
+      "C:\\Users\\samha\\anaconda3\\lib\\site-packages\\solarcurtailment\\solarcurtailment.py:907: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  test['polynomial_fit'] = z[0]*test['time_in_seconds']*test['time_in_seconds'] + \\\n",
-      "C:\\Users\\samha\\anaconda3\\lib\\site-packages\\solarcurtailment.py:916: SettingWithCopyWarning: \n",
+      "C:\\Users\\samha\\anaconda3\\lib\\site-packages\\solarcurtailment\\solarcurtailment.py:916: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  test['ones'] = 1\n",
-      "C:\\Users\\samha\\anaconda3\\lib\\site-packages\\solarcurtailment.py:919: FutureWarning: `rcond` parameter will change to the default of machine precision times ``max(M, N)`` where M and N are the input matrix dimensions.\n",
+      "C:\\Users\\samha\\anaconda3\\lib\\site-packages\\solarcurtailment\\solarcurtailment.py:919: FutureWarning: `rcond` parameter will change to the default of machine precision times ``max(M, N)`` where M and N are the input matrix dimensions.\n",
       "To use the future default and silence this warning we advise to pass `rcond=None`, to keep using the old, explicitly pass `rcond=-1`.\n",
       "  m,c = np.linalg.lstsq(A,y)[0]\n",
-      "C:\\Users\\samha\\anaconda3\\lib\\site-packages\\solarcurtailment.py:920: SettingWithCopyWarning: \n",
+      "C:\\Users\\samha\\anaconda3\\lib\\site-packages\\solarcurtailment\\solarcurtailment.py:920: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  test['y_line'] = c + m*test['cf']\n",
-      "C:\\Users\\samha\\anaconda3\\lib\\site-packages\\solarcurtailment.py:924: SettingWithCopyWarning: \n",
+      "C:\\Users\\samha\\anaconda3\\lib\\site-packages\\solarcurtailment\\solarcurtailment.py:924: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  test['residuals'] = test['polynomial_fit'] - test['y_line']\n",
-      "C:\\Users\\samha\\anaconda3\\lib\\site-packages\\solarcurtailment.py:932: SettingWithCopyWarning: \n",
+      "C:\\Users\\samha\\anaconda3\\lib\\site-packages\\solarcurtailment\\solarcurtailment.py:932: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
