--- a/src/solarcurtailment/vvar detection.ipynb
+++ b/src/solarcurtailment/vvar detection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "2b35e7f6",
    "metadata": {},
    "outputs": [
@@ -881,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "daaa9849",
    "metadata": {},
    "outputs": [
@@ -932,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "0c26ea5b",
    "metadata": {},
    "outputs": [],
@@ -997,11 +997,12 @@
     "        percentage_in_buffer_range = float(count_in_buffer_range) / float(len(decreasing_var.index)) * 100\n",
     "        PERCENTAGE_THRESHOLD = 80\n",
     "\n",
-    "        # According to AS NZS 4777.2 2020. Previously, 2015, the range was narrower but in the range of 2020\n",
-    "        V3_LOWER_LIMIT = 230\n",
-    "        V3_UPPER_LIMIT = 265\n",
-    "        V4_LOWER_LIMIT = 230\n",
-    "        V4_UPPER_LIMIT = 265 \n",
+    "        # This is according to the combined range from SAPN TS-129, AS/NZS 4777-2015, ENA recommendation - 2019, and\n",
+    "        # AS/NZS 4777 - 2020 (Australia B - small sytems) with 1.5 margin to take random error into account.\n",
+    "        V3_LOWER_LIMIT = 233.5\n",
+    "        V3_UPPER_LIMIT = 251.5\n",
+    "        V4_LOWER_LIMIT = 251.5\n",
+    "        V4_UPPER_LIMIT = 269.5\n",
     "\n",
     "        compliance_percent = percentage_in_buffer_range > PERCENTAGE_THRESHOLD\n",
     "        compliance_v3 = V3_LOWER_LIMIT < V3 < V3_UPPER_LIMIT \n",
@@ -1025,17 +1026,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "ebabda08",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x134bd23a0a0>"
+       "<matplotlib.legend.Legend at 0x23ca0609b50>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1063,19 +1064,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9de41b2f",
+   "execution_count": 6,
+   "id": "93464dd3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "247.2"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "V3"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "93464dd3",
+   "execution_count": 7,
+   "id": "e791ee87",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "252.70000000000002"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "V4"
+   ]
   }
  ],
  "metadata": {
