--- a/other/JUST MESSY STUFF HERE.ipynb
+++ b/other/JUST MESSY STUFF HERE.ipynb
@@ -3,6 +3,68 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "a408be29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MyClass:\n",
+    "    def method_1 (self):\n",
+    "        print('This if method_1!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "b4e21d83",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This if method_1!\n"
+     ]
+    }
+   ],
+   "source": [
+    "myclass = MyClass()\n",
+    "myclass.method_1()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "442dafc5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MyClass2:\n",
+    "    def method_1 (self):\n",
+    "        print('This if method_1!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "0c34aa38",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This if method_1!\n"
+     ]
+    }
+   ],
+   "source": [
+    "myclass2 = MyClass2()\n",
+    "myclass2.method_1()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "id": "4791cfea",
    "metadata": {},
    "outputs": [],
