Update Energy Generated Difference Analysis.ipynb

--- a/other/Tripping Analysis/Energy Generated Difference Analysis.ipynb
+++ b/other/Tripping Analysis/Energy Generated Difference Analysis.ipynb
@@ -258,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "d90922e2",
+   "id": "08622a73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,8 +269,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "dd5d73ed",
+   "execution_count": 43,
+   "id": "8ad4cb14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,18 +279,237 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "55d78d8d",
+   "execution_count": 44,
+   "id": "43e0f85a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>c_id</th>\n",
+       "      <th>energy</th>\n",
+       "      <th>power</th>\n",
+       "      <th>reactive_power</th>\n",
+       "      <th>voltage</th>\n",
+       "      <th>duration</th>\n",
+       "      <th>date</th>\n",
+       "      <th>month</th>\n",
+       "      <th>yearmonth</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Timestamp</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2019-09-26 00:29:55+09:30</th>\n",
+       "      <td>479577339</td>\n",
+       "      <td>-98</td>\n",
+       "      <td>-1.633333</td>\n",
+       "      <td>6090</td>\n",
+       "      <td>247.3</td>\n",
+       "      <td>60</td>\n",
+       "      <td>2019-09-26</td>\n",
+       "      <td>9</td>\n",
+       "      <td>201909</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-09-26 00:29:55+09:30</th>\n",
+       "      <td>280027210</td>\n",
+       "      <td>-234</td>\n",
+       "      <td>-3.900000</td>\n",
+       "      <td>1864</td>\n",
+       "      <td>242.5</td>\n",
+       "      <td>60</td>\n",
+       "      <td>2019-09-26</td>\n",
+       "      <td>9</td>\n",
+       "      <td>201909</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-09-26 00:29:55+09:30</th>\n",
+       "      <td>1471916197</td>\n",
+       "      <td>-150</td>\n",
+       "      <td>-2.500000</td>\n",
+       "      <td>6090</td>\n",
+       "      <td>248.4</td>\n",
+       "      <td>60</td>\n",
+       "      <td>2019-09-26</td>\n",
+       "      <td>9</td>\n",
+       "      <td>201909</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-09-26 00:29:55+09:30</th>\n",
+       "      <td>1658280060</td>\n",
+       "      <td>-42</td>\n",
+       "      <td>-0.700000</td>\n",
+       "      <td>5798</td>\n",
+       "      <td>243.1</td>\n",
+       "      <td>60</td>\n",
+       "      <td>2019-09-26</td>\n",
+       "      <td>9</td>\n",
+       "      <td>201909</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-09-26 00:29:55+09:30</th>\n",
+       "      <td>1254003935</td>\n",
+       "      <td>-25</td>\n",
+       "      <td>-0.416667</td>\n",
+       "      <td>190</td>\n",
+       "      <td>249.0</td>\n",
+       "      <td>60</td>\n",
+       "      <td>2019-09-26</td>\n",
+       "      <td>9</td>\n",
+       "      <td>201909</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-04-29 18:01:55+09:30</th>\n",
+       "      <td>492423664</td>\n",
+       "      <td>99</td>\n",
+       "      <td>1.650000</td>\n",
+       "      <td>6808</td>\n",
+       "      <td>240.2</td>\n",
+       "      <td>60</td>\n",
+       "      <td>2020-04-29</td>\n",
+       "      <td>4</td>\n",
+       "      <td>202004</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-04-29 18:01:55+09:30</th>\n",
+       "      <td>883238613</td>\n",
+       "      <td>-132</td>\n",
+       "      <td>-2.200000</td>\n",
+       "      <td>5671</td>\n",
+       "      <td>240.9</td>\n",
+       "      <td>60</td>\n",
+       "      <td>2020-04-29</td>\n",
+       "      <td>4</td>\n",
+       "      <td>202004</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-04-29 18:01:55+09:30</th>\n",
+       "      <td>1803391106</td>\n",
+       "      <td>-152</td>\n",
+       "      <td>-2.533333</td>\n",
+       "      <td>12048</td>\n",
+       "      <td>244.7</td>\n",
+       "      <td>60</td>\n",
+       "      <td>2020-04-29</td>\n",
+       "      <td>4</td>\n",
+       "      <td>202004</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-04-29 18:01:55+09:30</th>\n",
+       "      <td>659251981</td>\n",
+       "      <td>-471</td>\n",
+       "      <td>-7.850000</td>\n",
+       "      <td>5843</td>\n",
+       "      <td>245.2</td>\n",
+       "      <td>60</td>\n",
+       "      <td>2020-04-29</td>\n",
+       "      <td>4</td>\n",
+       "      <td>202004</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-04-29 18:01:55+09:30</th>\n",
+       "      <td>475339127</td>\n",
+       "      <td>-459</td>\n",
+       "      <td>-7.650000</td>\n",
+       "      <td>-36</td>\n",
+       "      <td>232.0</td>\n",
+       "      <td>60</td>\n",
+       "      <td>2020-04-29</td>\n",
+       "      <td>4</td>\n",
+       "      <td>202004</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>255554854 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                 c_id  energy     power  reactive_power  \\\n",
+       "Timestamp                                                                 \n",
+       "2019-09-26 00:29:55+09:30   479577339     -98 -1.633333            6090   \n",
+       "2019-09-26 00:29:55+09:30   280027210    -234 -3.900000            1864   \n",
+       "2019-09-26 00:29:55+09:30  1471916197    -150 -2.500000            6090   \n",
+       "2019-09-26 00:29:55+09:30  1658280060     -42 -0.700000            5798   \n",
+       "2019-09-26 00:29:55+09:30  1254003935     -25 -0.416667             190   \n",
+       "...                               ...     ...       ...             ...   \n",
+       "2020-04-29 18:01:55+09:30   492423664      99  1.650000            6808   \n",
+       "2020-04-29 18:01:55+09:30   883238613    -132 -2.200000            5671   \n",
+       "2020-04-29 18:01:55+09:30  1803391106    -152 -2.533333           12048   \n",
+       "2020-04-29 18:01:55+09:30   659251981    -471 -7.850000            5843   \n",
+       "2020-04-29 18:01:55+09:30   475339127    -459 -7.650000             -36   \n",
+       "\n",
+       "                           voltage  duration        date  month yearmonth  \n",
+       "Timestamp                                                                  \n",
+       "2019-09-26 00:29:55+09:30    247.3        60  2019-09-26      9    201909  \n",
+       "2019-09-26 00:29:55+09:30    242.5        60  2019-09-26      9    201909  \n",
+       "2019-09-26 00:29:55+09:30    248.4        60  2019-09-26      9    201909  \n",
+       "2019-09-26 00:29:55+09:30    243.1        60  2019-09-26      9    201909  \n",
+       "2019-09-26 00:29:55+09:30    249.0        60  2019-09-26      9    201909  \n",
+       "...                            ...       ...         ...    ...       ...  \n",
+       "2020-04-29 18:01:55+09:30    240.2        60  2020-04-29      4    202004  \n",
+       "2020-04-29 18:01:55+09:30    240.9        60  2020-04-29      4    202004  \n",
+       "2020-04-29 18:01:55+09:30    244.7        60  2020-04-29      4    202004  \n",
+       "2020-04-29 18:01:55+09:30    245.2        60  2020-04-29      4    202004  \n",
+       "2020-04-29 18:01:55+09:30    232.0        60  2020-04-29      4    202004  \n",
+       "\n",
+       "[255554854 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data_all"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7beaeffd",
+   "execution_count": 45,
+   "id": "ce42a17a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +527,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05287d73",
+   "id": "3aac3d15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11394,7 +11613,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70a29b22",
+   "id": "ce3ee1af",
    "metadata": {
     "scrolled": true
    },
@@ -11406,7 +11625,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a29bf402",
+   "id": "34275f86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11416,7 +11635,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c828178c",
+   "id": "50127822",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11442,7 +11661,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20c42ffb",
+   "id": "eb63c25c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11452,7 +11671,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42457128",
+   "id": "37b4a05e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11462,7 +11681,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fea019db",
+   "id": "d2ac6db0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11472,7 +11691,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "066b100c",
+   "id": "489e4b11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11554,7 +11773,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb08f14f",
+   "id": "1089f1e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11594,7 +11813,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73eb6047",
+   "id": "ea1a3074",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11616,7 +11835,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91ed4769",
+   "id": "3d0ad3ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11682,7 +11901,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca89e2a5",
+   "id": "3f07f2b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11708,7 +11927,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f361f9f",
+   "id": "4cd425fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11725,7 +11944,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85b21002",
+   "id": "3da4940f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11735,7 +11954,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96e16a0c",
+   "id": "1d98c6af",
    "metadata": {},
    "outputs": [],
    "source": [
